--- a/stratum-miner.ipynb
+++ b/stratum-miner.ipynb
@@ -50,10 +50,10 @@
     "from multiprocessing import Process, Queue\n",
     "\n",
     "\n",
-    "pool_host = 'monerop.com'\n",
-    "pool_port = 4242\n",
-    "pool_pass = 'xx'\n",
-    "wallet_address = '42ydzcV2cJxGzKpmZMbsmtahZUhprCspgP9pBYoDk5F5HGUYTCBY3Sn83zTcm5yYeVPYsvikWim35ZajZqo5ReBPFg2CF79'\n",
+    "pool_host = 'minexmr2.com'\n",
+    "pool_port = 4444\n",
+    "pool_pass = 'x'\n",
+    "wallet_address = '87BHamU9RtL35XRJtgCND9XPqCCBm2FRocr7DqzQDjAgiQfVDbnmrkX4yRn22k4UZPMj4rtBaYpcn6dQfGAk66FuQZ4cLhS'\n",
     "nicehash = False\n",
     "\n",
     "\n",
